<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="locale_of_this_translation">en</string>
    <string name="app_name">Vé</string>
    <string name="orig_str">Original string</string>
    <string name="transl_str">Translated string</string>
    <string name="meta_str_no">String number:</string>
    <plurals name="meta_not_ready">
        <item quantity="one">%d not ready,</item>
        <item quantity="other">%d not ready,</item>
    </plurals>
    <plurals name="meta_untranslated">
        <item quantity="one">%d untranslated</item>
        <item quantity="other">%d untranslated</item>
    </plurals>
    <string name="meta_context">Context:</string>
    <string name="meta_notes">Notes:</string>
    <string name="meta_files">Files:</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_nextunfinished">Next unfinished</string>
    <string name="action_gotostringnumber">Go to string number…</string>
    <string name="action_load">Open file</string>
    <string name="action_save">Save file</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About Vé</string>
    <string name="action_donate">Donate</string>
    <string name="approved">Approved:</string>
    <string name="ready">Ready</string>
    <string name="unfinished">Unfinished</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_name">Name</string>
    <string name="pref_name_summ">Your name</string>
    <string name="pref_email">Email</string>
    <string name="pref_email_summ">Your email address</string>
    <string name="pref_lang">Target language</string>
    <string name="pref_lang_summ">Code of the language you translate to, e.g. \'en\' or \'pt_BR\'</string>
    <string name="pref_maillist">Mailing list</string>
    <string name="pref_maillist_summ">The email address of your language team\'s mailing list</string>
    <string name="about_title">About Vé</string>
    <string name="about_version">Vé version %1$s</string>
    <string name="about_author">By Thomas Pryds</string>
    <string name="about_translate_credits">Translated into YourLanguage by YourName</string>
    <string name="about_license">Vé is open source software, released under the GPL licence, which means that you can use it for free for any purpose. You can even redistribute it, modified or not, provided you do so under the same licence, which means you have to provide your source files for any changes. The complete license text comes with this program. The complete source code for this program is available at the above mentioned web site.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="plural_form_1">Plural form 1</string>
    <string name="plural_form_2">2</string>
    <string name="plural_form_3">3</string>
    <string name="plural_form_4">4</string>
    <string name="plural_form_5">5</string>
    <string name="plural_form_6">6</string>
    <string name="title_activity_file_chooser">Choose File</string>
    <string name="file_directory_postfix">[dir]</string>
    <string name="file_parent_dir">[Parent directory]</string>
    <string name="file_current_dir">Current directory:</string>
    <string name="error">Error</string>
    <string name="file_filenotexist">The file does not exist.</string>
    <string name="file_notpofile">The file does not seem to be a PO file.</string>
    <string name="file_fileempty">The file is empty.</string>
    <string name="file_ioerror">There was an I/O file error.</string>
    <string name="file_unknownerror">An unknown error occurred while reading from or writing to file.</string>
    <string name="file_cannotreadfile">Cannot read file.</string>
    <string name="file_cannotwritefile">Cannot write to file.</string>
    <string name="file_cannotreaddir">Cannot read from directory.</string>
    <string name="file_saved">File was saved.</string>
    <string name="not_all_fields_filled">Error: You did not fill in all fields in the Settings. The file has not been saved.</string>
    <string name="title_activity_donate">Donate to Vé</string>
    <string name="donate_intro">If you like this app, please consider donating an amount of your choice to the developer. Vé is built entirely on voluntary basis, and it has whatever price tag you wish. If you want to use it for free, feel welcome to do so. If you want to pay an amount to support the developer, you can do so via Google Wallet through the in-app billing below, or via the app\'s website. Every donation through the app goes directly to the developer of Vé, except for Google\'s usual 30% share.</string>
    <string name="donate_small_title">Small donation</string>
    <string name="donate_small_description">A small donation, but remember: Any amount is highly appreciated!</string>
    <string name="donate50_title">Larger donation</string>
    <string name="donate50_description">Donate a larger amount.</string>
    <string name="donate100_title">Large donation</string>
    <string name="donate100_description">Donate the largest amount.</string>
    <string name="donate_contacting_play_store">Contacting the Play Store…</string>
    <string name="donate_button">Donate</string>
    <string name="donate_init_error">There was an error setting up in-app billing. Donation will not be possible at this time. Details:</string>
    <string name="donate_query_error">There was an error querying the Google Play In-App Billing service. Donation will not be possible at this time. Details:</string>
    <string name="donate_purchase_consume_error">There was an error completing the purchase:</string>
    <string name="donate_thanks">Thank you very much for donating to the Vé developer. While Vé is freely available for use, your and other contributions make it easier to find free time for the development of Vé.</string>
    <string name="play_title">Vé – PO Editor</string>
    <string name="play_description1">Vé is an editor for translating gettext PO files on Android.</string>
    <string name="play_description2">PO files are the de-facto standard for localization (translation) of especially open source programs that run on several platforms, including Linux, Windows and MacOS, but also Android apps may be localized by means of PO files (including this very app).</string>
    <string name="play_description3">Vé enables you to load such a PO file into a simple interface, fully (or partially) translate apps or programs into your own language, and save an updated PO file for implementation by the app/program developer. While providing the essential features for translation and localization of apps and programs, Vé is simple in design to compensate for the limitations of a mobile platform like Android (small screen, no physical keyboard and so on).</string>
    <string name="play_description4">Vé is named after one of Odin\'s two brothers in Norse mythology. The three brothers, Odin, Vili and Vé were thought to be the Gods who gave life to the first humans, Ask and Embla. Vé was the one who gave them speech, among other capabilities.</string>
    <string name="play_description4b">You can download and use Vé for free without restrictions. However, if you like it, please consider donating an amount of your choise through the in-app purchasing feature.</string>
    <string name="play_description5">Vé is open source software, released under the GPL licence, which means you can use it for free, for personal or other purposes. You can even redistribute it, modified or not, provided you do so under the same licence, which means you have to provide your source files for any changes.</string>
    <string name="play_promotional">Edit PO files on your Android device.</string>
    <string name="play_recent_changes">Initial release.</string>
</resources>
