<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <eu.pryds.ve.EditTextPreferenceShowValue
        android:key="pref_name"
        android:title="@string/pref_name"
        android:summary="@string/pref_name_summ"
        android:defaultValue="" />
    
    <eu.pryds.ve.EditTextPreferenceShowValue
        android:key="pref_email"
        android:title="@string/pref_email"
        android:summary="@string/pref_email_summ"
        android:defaultValue="" />
    
    <eu.pryds.ve.EditTextPreferenceShowValue
        android:key="pref_lang"
        android:title="@string/pref_lang"
        android:summary="@string/pref_lang_summ"
        android:defaultValue="" />
    
    <eu.pryds.ve.EditTextPreferenceShowValue
        android:key="pref_maillist"
        android:title="@string/pref_maillist"
        android:summary="@string/pref_maillist_summ"
        android:defaultValue="" />
    
</PreferenceScreen>
