<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <!--     android:icon="@drawable/ic_action_search" -->
    
    <item android:id="@+id/action_previous"
          android:title="@string/action_previous"
          android:icon="@drawable/ic_action_previous_item"
          android:showAsAction="ifRoom"
          android:enabled="false" />

    <item android:id="@+id/action_next"
          android:title="@string/action_next"
          android:icon="@drawable/ic_action_next_item"
          android:showAsAction="ifRoom"
          android:enabled="false" />
    
    <item android:id="@+id/action_nextunfinished"
          android:title="@string/action_nextunfinished"
          android:icon="@drawable/ic_action_forward"
          android:showAsAction="ifRoom"
          android:enabled="false" />

    <item android:id="@+id/action_load"
          android:title="@string/action_load"
          android:showAsAction="never" />

    <item android:id="@+id/action_save"
          android:title="@string/action_save"
          android:showAsAction="never"
          android:enabled="false" />
    
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:showAsAction="never" />
</menu>
